# tauri-websockets

./: README.md  package-lock.json  package.json
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
